./img/newsletterImg-removebg-preview.png

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </div>
 
         
-          <img id="newsLatterImage" src="/img/newsletterImg-removebg-preview.png" alt="postbox">
+          <img id="newsLatterImage" src="./img/newsletterImg-removebg-preview.png" alt="postbox">
         
 
         <div id="newsLatterFormular">
