#logo{  width: 300px;

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="TopMenu">
 
     
-       <a href="index.html"><img id="logo" src="./img/logo-removebg-preview.png" width="300" alt="logo"></a> 
+       <a href="index.html"><img id="logo" src="./img/logo-removebg-preview.png" alt="logo"></a> 
        
 
       <div id="navFlexRight">
