--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
     
 
     <div class="zero">        
-        <p id="tree">
-            
-            <a href="#" class="sideMenu">POVINNÁ VÝBAVA</a><br>
+        <p id="tree">            
+            <!--<a href="#" class="sideMenu">POVINNÁ VÝBAVA</a><br>
             <a href="#" class="sideMenu">INTERIÉR </a><br>
             <a href="#" class="sideMenu">EXTERIÉR</a><br>
             <a href="#" class="sideMenu">UNIVERZÁLNE DOPLNKY </a><br>
@@ -47,7 +46,8 @@
             <a href="#" class="sideMenu">REFLEXNÉ PRVKY </a><br>
             <a href="#" class="sideMenu">NÁSTENNÉ LEKÁRNIČKY </a><br>
             <a href="#" class="sideMenu">RUKAVICE </a><br>
-            <a href="#" class="sideMenu">DEZINFEKCIA </a><br>                   
+            <a href="#" class="sideMenu">DEZINFEKCIA </a><br>  -->  
+
         </p>
       </div>
       <div id="mainBanner">
@@ -262,5 +262,6 @@
       <p id="copy"><b>Copyright © 2022</b></p>
     </footer>
     <script src="./slideshow.js"></script>
+    <script src="./importProduct.js"></script>
   </body>
 </html>
