--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
        
 
       <div id="navFlexRight">
-       <a class="active topnavWithoutLogo" href="index.html" >Domov</a>
-      <a class="topnavWithoutLogo" href="https://google.sk">Kto sme</a>
-      <a class="topnavWithoutLogo" href="#contact">Ako nakupovať</a>
-      <a class="topnavWithoutLogo" href="#about">Kontakt</a>
+       <a class="active topnavWithoutLogo" href="index.html" ><i class="fa-solid fa-house"></i> Domov</a>
+      <a class="topnavWithoutLogo" href="https://google.sk"><i class="fa-solid fa-people-group"></i> Kto sme</a>
+      <a class="topnavWithoutLogo" href="#contact"><i class="fa-regular fa-credit-card"></i> Ako nakupovať</a>
+      <a class="topnavWithoutLogo" href="#about"><i class="fa-solid fa-address-card"></i> Kontakt</a>
             <input id="search" type="search" name="search" />
         <button id="find" class="fa-solid fa-magnifying-glass" onclick="find()"></button>
       <a class="topnavWithoutLogo" href="#"><i class="fa-solid fa-basket-shopping"></i></a>
