counter pieces in product detail + increment price

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 <div id="TopMenu">    
-       <a href="product.html"><img id="logo" src="./img/logo-removebg-preview.png" alt="logo"></a> 
+       <a href="index.html"><img id="logo" src="./img/logo-removebg-preview.png" alt="logo"></a> 
        
       <div id="navFlexRight">
        <a class="active topnavWithoutLogo" href="index.html"><i class="fa-solid fa-house"></i> Domov</a>
