pridaj do kosika

--- a/basket.html
+++ b/basket.html
@@ -22,7 +22,7 @@
       <a class="topnavWithoutLogo" href="#about"><i class="fa-solid fa-address-card"></i> Kontakt</a>
             <input id="search" type="search" name="search" />
         <button id="find" class="fa-solid fa-magnifying-glass" onclick="find()"></button>
-      <a class="topnavWithoutLogo" href="#"><i class="fa-solid fa-basket-shopping"></i></a>
+      <a class="topnavWithoutLogo" href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
       <a class="topnavWithoutLogo" href="#"><i class="fa-regular fa-user"></i></a>
       </div>
           </div> 
@@ -34,7 +34,7 @@
                 <div id="basketWrapperHeader">
 
                 <h1 id="h1InBasket">Košik</h1>
-                <div id="continueShoppIngBaskeHead">Pokračovať v nákupe</div>
+                <div id="continueShoppIngBaskeHead"><a href="index.html"> Pokračovať v nákupe</a></div>
                 <button id="continueOrderingButtonHead">Pokračovať v objednávke</button>
 
                 </div>
@@ -81,7 +81,7 @@
             </div>
 
             <div id="totalPriceInBasketWrapperGrid">
-            <div id="continueShoppIngBasketFooter">Pokračovať v nákupe</div>
+            <div id="continueShoppIngBasketFooter"><a href="index.html"> Pokračovať v nákupe</a></div>
                 <button id="continueOrderingButtonFooter">Pokračovať v objednávke</button>
 
         
