--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a class="topnavWithoutLogo" href="#about"><i class="fa-solid fa-address-card"></i> Kontakt</a>
             <input id="search" type="search" name="search" />
         <button id="find" class="fa-solid fa-magnifying-glass" onclick="find()"></button>
-      <a class="topnavWithoutLogo" href="#"><i class="fa-solid fa-basket-shopping"></i></a>
+      <a class="topnavWithoutLogo" href="basket.html"><i class="fa-solid fa-basket-shopping"></i></a>
       <a class="topnavWithoutLogo" href="#"><i class="fa-regular fa-user"></i></a>
       </div>
     </div>   
