Vyhladavanie v celom nazve

--- a/product.html
+++ b/product.html
@@ -22,7 +22,7 @@
       <a class="topnavWithoutLogo" href="#contact"><i class="fa-regular fa-credit-card"></i> Ako nakupovať</a>
       <a class="topnavWithoutLogo" href="#about"><i class="fa-solid fa-address-card"></i> Kontakt</a>
             <input id="search" type="search" name="search" />
-        <button id="find" class="fa-solid fa-magnifying-glass" onclick="find()"></button>
+            <button id="find" class="fa-solid fa-magnifying-glass" onclick="searching()"></button>
         <a id="topNavBasketIcon" class="topnavWithoutLogo" href="basket.html"><i class="fa-solid fa-cart-shopping" style="font-size: 30px;"></i></a>
       <a class="topnavWithoutLogo" href="#"><i class="fa-regular fa-user"></i></a>
       </div>
