--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <title>AutoDoplnky</title>
   </head>
   <body onload="productInBasket()">
+
+
 <div id="TopMenu">    
-       <a href="index.html"><img id="logo" src="./img/logo-removebg-preview.png" alt="logo"></a> 
+       <a href="index.html"><img  id="logo" src="./img/logo-removebg-preview.png" alt="logo"></a> 
        
       <div id="navFlexRight">
        <a class="active topnavWithoutLogo" href="index.html"><i class="fa-solid fa-house"></i> Domov</a>
@@ -28,6 +30,17 @@
     </div>   
 
 
+    <div id="TopMenuMobil">    
+      <a href="index.html"><img  id="logoMobil" src="./img/logo-removebg-preview.png" alt="logo"></a>
+      <a id="menuLeftMobil" class="topnavWithoutLogoMobil" href="#" style="font-size: 30px;"><i class="fa-solid fa-bars"></i></a>
+      <input id="searchMobil" type="search" name="search" />
+      <button id="findMobil" class="fa-solid fa-magnifying-glass" style="font-size: 30px;"  onclick="searching()"></button>
+      <a id="topNavBasketIconMobil" class="topnavWithoutLogoMobil" href="basket.html"><i class="fa-solid fa-cart-shopping" style="font-size: 30px;"></i></a>
+      <a id="userMobil" class="topnavWithoutLogoMobil" href="#"><i class="fa-regular fa-user" style="font-size: 30px;"></i></a>
+      <a id="menuRightMobil" class="topnavWithoutLogoMobil" href="#" style="font-size: 30px;"><i class="fa-solid fa-bars"></i></a>
+   </div>   
+
+   
            
       <div  class="navigation">
         <ul id="tree">
