--- a/basket.html
+++ b/basket.html
@@ -61,11 +61,11 @@
       
       <div id="searchMobil">
       <input id="inputSearchMobil" type="search" name="search" />
-      <button id="findMobil" class="fa-solid fa-magnifying-glass" style="font-size: 30px;"  onclick="searching()"></button></div>
+      <button id="findMobil" class="fa-solid fa-magnifying-glass"  onclick="searching()"></button></div>
 
-      <a id="topNavBasketIconMobil" class="topnavWithoutLogoMobil" href="basket.html"><i class="fa-solid fa-cart-shopping" style="font-size: 30px;"></i></a>
-      <a id="userMobil" class="topnavWithoutLogoMobil" href="#"><i class="fa-regular fa-user" style="font-size: 30px;"></i></a>
-      <a id="menuRightMobil" class="topnavWithoutLogoMobil" href="#" style="font-size: 30px;"><i class="fa-solid fa-bars"></i></a>
+      <a id="topNavBasketIconMobil" class="topnavWithoutLogoMobil" href="basket.html"><i class="fa-solid fa-cart-shopping"></i></a>
+      <a id="userMobil" class="topnavWithoutLogoMobil" href="#"><i class="fa-regular fa-user" ></i></a>
+      <a id="menuRightMobil" class="topnavWithoutLogoMobil" href="#"><i class="fa-solid fa-bars"></i></a>
     
 
    </div>    
