--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <div id="newsLatterFormular">
         <input id="newsLatterFormularInput"  type="search" name="search" />
-        <button id="newsLatterFormularButton">Prihlásiť</button>
+        <button id="newsLatterFormularButton">Poslať</button>
         </div>
 
       </div>
