velkost ikon responsive

--- a/product.html
+++ b/product.html
@@ -29,7 +29,7 @@
           </div> 
 
           <div id="TopMenuMobil"> 
-            <a id="menuLeftMobil" class="topnavWithoutLogoMobil" href="#" style="font-size: 30px;"><i class="fa-solid fa-bars"></i></a>
+            <a id="menuLeftMobil" class="topnavWithoutLogoMobil" href="#"><i class="fa-solid fa-bars"></i></a>
             
             <a href="index.html"><img  id="logoMobil" src="./img/logo-removebg-preview.png" alt="logo"></a>
             
