basket form respons design

--- a/basket.html
+++ b/basket.html
@@ -77,7 +77,7 @@
           <a href="index.html"> Pokračovať v nákupe</a>
         </div>
         <button class="continueOrderingButtonHead">
-          <a href="#contactAddress">Pokračovať v objednávke</a>
+          <a href="#contactAddressMobil">Pokračovať v objednávke</a>
         </button>
       </div>
 
@@ -119,7 +119,7 @@
 
       <div id="contactAddress" style="height: 4.6em"></div>
 
-      <h1 class="h1InBasket">Kontaktné údaje</h1>
+      <h1 id="contactAddressMobil" class="h1InBasket">Kontaktné údaje</h1>
 
       <img src="./img/address.png" style="width: 100%" alt="" />
 
@@ -272,6 +272,6 @@
     </footer>
 
     <script src="./basket.js"></script>
-    <script src=" responsiveMenu.js "></script>
+    <script src="responsiveMenu.js"></script>
   </body>
 </html>
