--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <a id="menuLeftMobil" class="topnavWithoutLogoMobil" style="font-size: 20px;" href="#"><i class="fa-solid fa-bars"></i></a>
       
       <a href="index.html"><img  id="logoMobil" src="./img/logo-removebg-preview.png" alt="logo"></a>
-      <div id="searchMobil">
-      <input id="inputSearchMobil" type="search" name="search" />
-      <button id="findMobil" class="fa-solid fa-magnifying-glass" style="font-size: 20px;"  onclick="searching()"></button></div>
+      <div class="searchMobil">
+      <input id="inputSearchMobil" type="inputSearchMobil" name="inputSearchMobil" />
+      <button id="findMobil" class="fa-solid fa-magnifying-glass" style="font-size: 20px;"  onclick="searchingMobil()"></button></div>
 
       <a id="topNavBasketIconMobil" class="topnavWithoutLogoMobil" href="basket.html"><i class="fa-solid fa-cart-shopping" style="font-size: 20px;"></i></a>
       <a id="userMobil" class="topnavWithoutLogoMobil" href="#"><i class="fa-regular fa-user" style="font-size: 20px;"></i></a>
