--- a/product.html
+++ b/product.html
@@ -12,7 +12,7 @@
     
        <title>Autodoplnky - detail produktu</title>
   </head>
-  <body onload="productInBasket()">
+  <body onload="productInBasket(), awayFromPage()">
 <div id="TopMenu">    
        <a href="index.html"><img id="logo" src="./img/logo-removebg-preview.png" alt="logo"></a> 
        
@@ -112,6 +112,7 @@
     <script src="./importProduct.js"></script>
     <script src="./basket.js"></script>
     <script src="responsiveMenu.js"></script>
+    <script src=" popup.js"></script>
   </body>
 </html>
 
