--- a/basket.html
+++ b/basket.html
@@ -218,62 +218,33 @@
     <footer>
       <div class="foot">
         <div class="foot1">
-          <p>Kde nás nájdete</p>
-          <div class="mapouter">
-            <div class="gmap_canvas">
-              <iframe
-                width="259"
-                height="191"
-                id="gmap_canvas"
-                src="https://maps.google.com/maps?q=london&t=&z=5&ie=UTF8&iwloc=&output=embed"
-                frameborder="0"
-                scrolling="no"
-                marginheight="0"
-                marginwidth="0"
-              ></iframe
-              ><a href="https://www.whatismyip-address.com"></a><br /><style>
-                .mapouter {
-                  position: relative;
-                  text-align: right;
-                  height: 191px;
-                  width: 240px;
-                }</style
-              ><a href="https://www.embedgooglemap.net">google map for web</a
-              ><style>
-                .gmap_canvas {
-                  overflow: hidden;
-                  background: none !important;
-                  height: 191px;
-                  width: 240px;
-                }
-              </style>
-            </div>
-          </div>
+           <p>Kde nás nájdete</p> 
+           <div class="mapouter"><div class="gmap_canvas"><iframe width="300" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=doplnkydoauta&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net">fmovies</a><br><style>.mapouter{position:relative;text-align:right;height:300px;width:300px;}</style><a href="https://www.embedgooglemap.net">google map for free</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:300px;}</style></div></div>
         </div>
         <div class="foot2">
-          <br />
+          <br>
           <h3>More info</h3>
           <ul>
             <li>ORA Our Story Why ORA?</li>
             <li>Accreditations</li>
-            <li>For Parents</li>
+            <li> For Parents</li>
             <li>or Educators</li>
             <li>Our Team</li>
             <li>Articles</li>
-            <li>News Privacy</li>
-          </ul>
+            <li> News Privacy</li>
+           </ul>
         </div>
-        <div class="foot3">
-          <br />
+        <div class = "foot3">
+          <br>
           <h3>Additional links</h3>
           <ul>
-            <li>Feedback</li>
-            <li>Entry level talent</li>
-            <li>Roles</li>
-            <li>Search & Apply</li>
-            <li>Who we are</li>
-            <li>Working here</li>
-            <li>Social Media</li>
+          <li>Feedback</li>
+          <li>Entry level talent</li>
+          <li> Roles</li>
+          <li>Search & Apply</li>
+          <li>Who we are</li>
+          <li>Working here</li>
+          <li> Social Media</li>
           </ul>
         </div>
       </div>
