--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="foot">
         <div class="foot1">
            <p>Kde nás nájdete</p> 
-          <div class="mapouter"><div class="gmap_canvas"><iframe width="259" height="191" id="gmap_canvas" src="https://maps.google.com/maps?q=london&t=&z=5&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com"></a><br><style>.mapouter{position:relative;text-align:right;height:191px;width:240px;}</style><a href="https://www.embedgooglemap.net">google map for web</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:191px;width:240px;}</style></div></div>
+           <div class="mapouter"><div class="gmap_canvas"><iframe width="300" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=doplnkydoauta&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net">fmovies</a><br><style>.mapouter{position:relative;text-align:right;height:300px;width:300px;}</style><a href="https://www.embedgooglemap.net">google map for free</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:300px;}</style></div></div>
         </div>
         <div class="foot2">
           <br>
