--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">      
         <title>AutoDoplnky</title>
   </head>
-  <body onload="productInBasket(), awayFromPage()">
+  <body onload="productInBasket()">
 
 
 <div id="TopMenu">    
@@ -49,7 +49,6 @@
          </div></a>
          
    </div>
-
 
    <div  class="navigation">
     <ul class="tree">
@@ -135,7 +134,7 @@
     <script src="./basket.js"></script>
     <script src="searching.js"></script>
     <script src=" responsiveMenu.js "></script>
-    <script src=" popup.js"></script>
+    
 
   </body>
 </html>
