--- a/product.html
+++ b/product.html
@@ -112,6 +112,7 @@
     <script src="./importProduct.js"></script>
     <script src="./basket.js"></script>
     <script src="responsiveMenu.js"></script>
+    <script src="searching.js"></script>
     
   </body>
 </html>
